chore: starport -> ignite/cli (#1063)
## Description
we are using outdated starport -> this PR updates dependencies and migrates from starport to ignite/cli.

---

### Author Checklist

_All items are required. Please add a note to the item if the item is not applicable and
please add links to any relevant follow up issues._

I have...

- [ ] included the correct [type prefix](https://github.com/commitizen/conventional-commit-types/blob/v3.0.0/index.json) in the PR title
- [ ] added `!` to the type prefix if API or client breaking change
- [ ] added appropriate labels to the PR
- [ ] targeted the correct branch (see [PR Targeting](https://github.com/umee-network/umee/blob/main/CONTRIBUTING.md#pr-targeting))
- [ ] provided a link to the relevant issue or specification
- [ ] added a changelog entry to `CHANGELOG.md`
- [ ] included comments for [documenting Go code](https://blog.golang.org/godoc)
- [ ] updated the relevant documentation or specification
- [ ] reviewed "Files changed" and left comments if necessary
- [ ] confirmed all CI checks have passed

### Reviewers Checklist

_All items are required. Please add a note if the item is not applicable and please add
your handle next to the items reviewed if you only reviewed selected items._

I have...

- [ ] confirmed the correct [type prefix](https://github.com/commitizen/conventional-commit-types/blob/v3.0.0/index.json) in the PR title
- [ ] confirmed all author checklist items have been addressed
- [ ] reviewed state machine logic
- [ ] reviewed API design and naming
- [ ] reviewed documentation is accurate
- [ ] reviewed tests and test coverage
- [ ] manually tested (if applicable)

--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -150,14 +150,14 @@ jobs:
         if: env.GIT_DIFF
       - name: Install Starport
         run: |
-          curl https://get.starport.network/starport@v0.19.5! | bash
+          curl https://get.ignite.com/cli! | bash
         if: env.GIT_DIFF
       - name: Start Local Network via Starport
         run: |
-          starport chain serve --reset-once -v -c ./starport.ci.yml > starport.out 2>&1 &
+          /usr/local/bin/ignite chain serve --reset-once -v -c ./starport.ci.yml  &
         if: env.GIT_DIFF
       - name: Test Local Network Liveness
         run: |
-          sleep 2m
-          ./contrib/scripts/test_localnet_liveness.sh 100 5 50 localhost
+          sleep 1m
+          ./contrib/scripts/test_localnet_liveness.sh 40 5 50 localhost
         if: env.GIT_DIFF
