--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -12,7 +12,15 @@ jobs:
     name: umee ${{ matrix.arch }} for ${{ matrix.targetos }}
     steps:
       - uses: actions/checkout@v3
+      - uses: technote-space/get-diff-action@v6.1.0
+        with:
+          PATTERNS: |
+            **/**.go
+            go.mod
+            go.sum
+
       - name: Setup go
+        if: env.GIT_DIFF
         uses: actions/setup-go@v3
         with:
           go-version: 1.18
@@ -21,6 +29,7 @@ jobs:
           GOARCH: ${{ matrix.arch }}
 
       - name: Get Go Cache
+        if: env.GIT_DIFF
         uses: actions/cache@v3
         with:
           path: |
@@ -30,11 +39,11 @@ jobs:
           key: ${{ runner.os }}-go-cache-${{ hashFiles('**/go.sum') }}
 
       - name: Compile
+        if: env.GIT_DIFF
         run: |
           go mod download
           cd cmd/umeed
           go build .
-
       - uses: actions/upload-artifact@v3
         with:
           name: umeed ${{ matrix.targetos }} ${{ matrix.arch }}
